# project-second-innings

./: .gitignore  README.md  app.py  pyproject.toml
docs/: 00_Project_Charter.md  01_System_Requirements.md  02_Use_Cases.md  03_System_Architecture.md  04_Data_Model.md  05_Detailed_Design.md  06_Verification_Plan.md
src/second_innings/: engine.py  models.py  scenario_io.py
src/second_innings.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_models.py
