[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "second-innings"
version = "0.1.0"
description = "Personal financial independence planning and retirement simulation"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
